--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,30 @@
 ---
 layout: page
 title: "Contact"
-description: "Have questions? I have answers (maybe)."
+description: "Alguna pregunta? No dudes en escribir."
 header-img: "img/contact.jpg"
 ---
 
-<p>Want to get in touch with me? Fill out the form below to send me a message and I will get back to you</p>
+<p>Querés contactarme? Querés colaborar con el sitio o escribir algún post?
+  Completá el formulario para enviarme un mensaje</p>
+
 <form name="sentMessage" id="contactForm">
     <div class="row control-group">
         <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Name</label>
-            <input type="text" class="form-control" placeholder="Name" name="name" required>
+            <label>Nombre</label>
+            <input type="text" class="form-control" placeholder="Nombre" name="name" required>
         </div>
     </div>
     <div class="row control-group">
         <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Email Address</label>
-            <input type="email" class="form-control" placeholder="Email Address" name="_replyto" required>
+            <label>Email</label>
+            <input type="email" class="form-control" placeholder="Email" name="_replyto" required>
         </div>
     </div>
     <div class="row control-group">
         <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Message</label>
-            <textarea rows="5" class="form-control" placeholder="Message" name="message" required></textarea>
+            <label>Mensaje</label>
+            <textarea rows="5" class="form-control" placeholder="Mensaje" name="message" required></textarea>
         </div>
     </div>
     <input type="text" name="_gotcha" style="display:none"/>
@@ -30,7 +32,7 @@ header-img: "img/contact.jpg"
     <div id="success"></div>
     <div class="row">
         <div class="form-group col-xs-12">
-            <button type="submit" class="btn btn-default" value="Send">Send</button>
+            <button type="submit" class="btn btn-default" value="Send">Enviar</button>
         </div>
     </div>
 </form>
