--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Contact"
+title: "Contacto"
 description: "Alguna pregunta? No dudes en escribir."
 header-img: "img/contact.jpg"
 ---
