Grammar and Spanish convert

--- a/contacto.html
+++ b/contacto.html
@@ -1,11 +1,11 @@
 ---
 layout: page
 title: "Contacto"
-description: "Alguna pregunta? No dudes en escribir."
+description: "¿Alguna pregunta? No dudes en escribir."
 header-img: "img/contact.jpg"
 ---
 
-<p>Querés contactarme? Querés colaborar con el sitio o escribir algún post?
+<p>¿Querés contactarme? ¿Querés colaborar con el sitio o escribir algún post?
   Completá el formulario para enviarme un mensaje</p>
 
 <form name="sentMessage" id="contactForm">
