Contact / About / Resize Img

--- a/about.html
+++ b/about.html
@@ -1,12 +1,23 @@
 ---
 layout: page
-title: "About"
-description: "This is what I do."
+title: "¿Quien soy?"
+description: "Resumido en pocas palabras"
 header-img: "img/about-me.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>Soy Mariano, tengo 33 años y nací y crecí en Buenos Aires, Argentina. Hace poco más de dos años que vivo en Barcelona. Me dedico a la informática y una de mis pasiones es correr, pasión que da vida a este blog.<p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>Mudarme a Catalunya me dio la posibilidad de acercarme más a la montaña, mis entrenamientos diarios pasaron de ser en el rosedal de Palermo al Parc Natural de Collserola.<p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>La idea de este blog, y el del anterior ya deprecado, surgió de conversaciones con amigos. El objetivo es transmitir de alguna manera el amor y la pasión que tengo por el Trail Running y la montaña.<p>
+
+<p>En <b>Elevation Gain</b> vas a encontrar:
+
+<li>Relatos de carreras, en primera persona y de quienes deseen contribuir</li>
+<li>Opiniones personales</li>
+<li>Inspiración para ponerte las zapatillas ( todos la necesitamos en algún momento)</li>
+<li>Información sobre carreras alrededor del mundo</li>
+<li>Biografías de deportistas</li>
+<p>
+
+<p> La iniciativa es que este blog sea abierto a quienes quieran relatar su experiencia en alguna ultra maratón, carrera de trail, kilometro vertical o la modalidad en la que hayas participado. Podes escribirme en la sección de <a href="http://elevationgain.com/contacto/">contacto</a>.<p>
