--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@ description: "¿Alguna pregunta? No dudes en escribir."
 header-img: "img/contact.jpg"
 ---
 
-<p>¿Querés contactarme? ¿Querés colaborar con el sitio o escribir algún post?
+<p>¿Querés contactarme? ¿Querés colaborar con el blog o escribir algún post?
   Completá el formulario para enviarme un mensaje</p>
 
 <form name="sentMessage" id="contactForm">
