--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Un Blog sobre Trail Running & vida al aire libre"
+description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
 ---
 
 {% for post in paginator.posts %}
