--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ description: "Resumido en pocas palabras"
 header-img: "img/about-me.jpg"
 ---
 
-<p>Soy Mariano, tengo 33 años y nací y crecí en Buenos Aires, Argentina. Hace poco más de dos años que vivo en Barcelona. Me dedico a la informática y una de mis pasiones es correr, pasión que da vida a este blog.<p>
+<p>Soy Mariano, tengo 33 años, nací y crecí en Buenos Aires, Argentina. Hace poco más de dos años que vivo en Barcelona. Me dedico a la informática y una de mis pasiones es correr, pasión que da vida a este blog.<p>
 
 <p>Mudarme a Catalunya me dio la posibilidad de acercarme más a la montaña, mis entrenamientos diarios pasaron de ser en el rosedal de Palermo al Parc Natural de Collserola.<p>
 
