add adsense homepage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire l
 <hr>
 {% endfor %}
 
+{% include advertisements.html %}
+
 <!-- Pager -->
 {% if paginator.total_pages > 1 %}
 <ul class="pager">
