--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre"
+description: "Un blog sobre Trail Running, deportes de Montaña y vida al aire libre. Sky Running, Ultra Trail y todas las modalidades en el mundo del Trail"
 ---
 
 {% include advertisements-home.html %}
